<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#237E7E7E"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/textstyle"
        android:gravity="center"
        android:text="@string/regist"
        android:textColor="#000000"
        android:textSize="24sp" />
    <!-- input phone -->
    <EditText
        android:id="@+id/editPhone"
        style="@style/textstyle"
        android:layout_width="fill_parent"
        android:background="@drawable/rounded_edittext_states"
        android:hint="@string/number"
        android:inputType="number"
        android:lines="1"
        android:maxLength="11"
        android:singleLine="true" />
    <!-- input password -->
    <EditText
        android:id="@+id/editPwd"
        style="@style/textstyle"
        android:layout_width="fill_parent"
        android:background="@drawable/rounded_edittext_states"
        android:hint="@string/password"
        android:lines="1"
        android:maxLength="16"
        android:password="true"
        android:singleLine="true" />
    <!-- the regist button -->
    <Button
        android:id="@+id/btnRegist"
        style="@style/textstyle"
        android:layout_width="fill_parent"
        android:background="@color/colorPrimary"
        android:onClick="OnMyRegistClick"
        android:text="@string/regist"
        android:textColor="@android:color/white"
        android:textSize="23dip"
        />
</LinearLayout>
