<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:id="@+id/main_ly"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_tv"
            style="@style/common_title"
            android:text="记账"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="446dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="85.0dip"
                    android:layout_marginLeft="6.0dip"
                    android:background="#00D1D1D1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cost_btn"
                        android:layout_width="fill_parent"
                        android:layout_height="52.0dip"
                        android:layout_marginLeft="15.0dip"
                        android:layout_marginTop="15.0dip"
                        android:layout_marginRight="15.0dip"
                        android:background="#FFFFFF"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="left|center"
                        android:hint="@string/Input_value"
                        android:paddingRight="10.0dip"
                        android:textColor="#030000"
                        android:textColorHint="#020000"
                        android:textSize="25.0dip"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip">

                        <TextView
                            android:id="@+id/txtBigCategory"
                            style="@style/form_row_label"
                            android:text="@string/spn_prompt_category"
                            android:textColor="#050000" />

                        <Spinner
                            android:id="@+id/BigCategory_spinner"
                            style="@style/form_row_input_middle"
                            android:layout_height="match_parent"
                            android:prompt="@string/spn_prompt_corporation"
                            android:textColorHint="@color/white" />

                    </FrameLayout>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="370dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20.0dip"
                        android:background="?android:attr/listDivider" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtSubCategory"
                            style="@style/form_row_label"
                            android:text="@string/spn_prompt_subcategory"
                            android:textColor="#070000" />

                        <Spinner
                            android:id="@+id/subCategory_spinner"
                            style="@style/form_row_input_middle"
                            android:dropDownWidth="wrap_content"
                            android:prompt="@string/spn_prompt_corporation"
                            android:textColorHint="@color/white" />

                    </FrameLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="370dip"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20.0dip"
                        android:background="?android:attr/listDivider" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtAccount"
                            style="@style/form_row_label"
                            android:text="@string/spn_prompt_account"
                            android:textColor="#050000" />

                        <Spinner
                            android:id="@+id/account_spinner"
                            style="@style/form_row_input_middle"
                            android:prompt="@string/spn_prompt_corporation"
                            android:textColorHint="@color/white" />

                    </FrameLayout>

                    <View
                        android:id="@+id/divider9"
                        android:layout_width="370dip"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20.0dip"
                        android:background="?android:attr/listDivider" />

                    <FrameLayout
                        android:id="@+id/corporation_fl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtShop"
                            style="@style/form_row_label"
                            android:text="@string/spn_prompt_corporation"
                            android:textColor="#050000" />

                        <Spinner
                            android:id="@+id/shop_spinner"
                            style="@style/form_row_input_middle"
                            android:prompt="@string/spn_prompt_corporation"
                            android:textColorHint="@color/white" />

                    </FrameLayout>

                    <View
                        android:id="@+id/divider10"
                        android:layout_width="370dip"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20.0dip"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        style="@style/form_row_input_middle"
                        android:orientation="horizontal"
                        android:paddingLeft="0.0dip"
                        android:paddingRight="0.0dip">

                        <FrameLayout
                            android:id="@+id/project_spn_fl"
                            android:layout_width="159.0dip"
                            android:layout_height="fill_parent">

                            <TextView
                                style="@style/form_row_label"
                                android:text="@string/Date"
                                android:textColor="#050000" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/trade_time_fl"
                            android:layout_width="159.0dip"
                            android:layout_height="fill_parent">

                            <Button
                                android:id="@+id/trade_time_btn"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/form_row_input_middle_short_left"
                                android:gravity="center"
                                android:textColor="#020000" />

                        </FrameLayout>
                    </LinearLayout>

                    <View
                        android:id="@+id/divider11"
                        android:layout_width="370dip"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20.0dip"
                        android:background="?android:attr/listDivider" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtNote"
                            style="@style/form_row_label"
                            android:text="@string/Remark"
                            android:textColor="#000000" />

                        <Spinner
                            android:id="@+id/note_spinner"
                            style="@style/form_row_input_middle"
                            android:prompt="@string/spn_prompt_corporation"
                            android:textColorHint="@color/white" />

                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/empty_fl"
                        style="@style/form_row_input_middle"
                        android:visibility="gone" />

                    <RelativeLayout
                        style="@style/form_row_layout_middle"
                        android:layout_height="102dp"
                        android:layout_marginTop="50dip">

                        <Button
                            android:id="@+id/save_btn"
                            style="@style/common_toolbar_btn_for_addexpense"
                            android:layout_width="115.0dip"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="39.0dip"
                            android:onClick="OnMySaveClick"
                            android:text="@string/save" />

                        <Button
                            android:id="@+id/cancel_btn"
                            style="@style/common_toolbar_btn_for_addexpense"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="30.0dip"
                            android:onClick="OnMyCancelClick"
                            android:text="@string/cancel" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
